--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="relative container mx-auto p-6">
+    <nav class="container relative mx-auto p-6">
       <!-- Flex container -->
       <div class="flex items-center justify-between">
         <!-- Logo -->
@@ -16,7 +16,7 @@
           <img src="img/logo.svg" alt="" />
         </div>
         <!-- Menu items -->
-        <div class="hidden md:flex space-x-6">
+        <div class="hidden space-x-6 md:flex">
           <a class="hover:text-darkGrayishBlue" href="#">Pricing</a>
           <a class="hover:text-darkGrayishBlue" href="#">Product</a>
           <a class="hover:text-darkGrayishBlue" href="#">About Us</a>
@@ -25,7 +25,7 @@
         </div>
         <!-- Button -->
         <a
-          class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brigthRedLight"
+          class="baseline hidden rounded-full bg-brightRed p-3 px-6 pt-2 text-white hover:bg-brigthRedLight md:block"
           href="#"
         >
           Get Started
@@ -34,7 +34,7 @@
         <!-- Hamburger Icon -->
         <button
           id="menu-btn"
-          class="open block hamburger md:hidden focus:outline-none"
+          class="open hamburger block focus:outline-none md:hidden"
         >
           <span class="hamburger-top"></span>
           <span class="hamburger-middle"></span>
@@ -46,7 +46,7 @@
       <div class="md:hidden">
         <div
           id="menu"
-          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
+          class="absolute left-6 right-6 mt-10 hidden flex-col items-center space-y-6 self-end bg-white py-8 font-bold drop-shadow-md sm:w-auto sm:self-center"
         >
           <a href="#">Pricing</a>
           <a href="#">Product</a>
@@ -60,12 +60,12 @@
     <section id="hero">
       <!-- Flex Container -->
       <div
-        class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0"
+        class="container mx-auto mt-10 flex flex-col-reverse items-center space-y-0 px-6 md:flex-row md:space-y-0"
       >
         <!-- Left item -->
-        <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+        <div class="mb-32 flex flex-col space-y-12 md:w-1/2">
           <h1
-            class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left"
+            class="max-w-md text-center text-4xl font-bold md:text-left md:text-5xl"
           >
             Bring everyone together to build better products
           </h1>
@@ -74,7 +74,7 @@
             while keeping the larger team goals in view.
           </p>
           <a
-            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brigthRedLight"
+            class="baseline self-start rounded-full bg-brightRed p-3 px-6 pt-2 text-white hover:bg-brigthRedLight"
             href="#"
           >
             Get Started
@@ -90,11 +90,11 @@
     <section id="features">
       <!-- Flex container -->
       <div
-        class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row"
+        class="container mx-auto mt-10 flex flex-col space-y-12 px-4 md:flex-row md:space-y-0"
       >
         <!-- what's Different -->
         <div class="flex flex-col space-y-12 md:w-1/2">
-          <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
+          <h2 class="max-w-md text-center text-4xl font-bold md:text-left">
             What's different about Manage?
           </h2>
           <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
@@ -107,13 +107,13 @@
         <div class="flex flex-col space-y-8 md:w-1/2">
           <!-- List Item 1 -->
           <div
-            class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row"
+            class="flex flex-col space-y-3 md:flex-row md:space-x-6 md:space-y-0"
           >
             <!-- Heading  -->
             <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
               <div class="flex items-center space-x-2">
                 <div
-                  class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed"
+                  class="rounded-full bg-brightRed px-4 py-2 text-white md:py-1"
                 >
                   01
                 </div>
@@ -124,7 +124,7 @@
             </div>
 
             <div>
-              <h3 class="hidden mb-4 text-lg font-bold md:block">
+              <h3 class="mb-4 hidden text-lg font-bold md:block">
                 Track company-wide progress
               </h3>
               <p class="text-darkGrayishBlue">
@@ -135,63 +135,57 @@
               </p>
             </div>
           </div>
-          <!-- List Item 1 -->
+          <!-- List Item 2 -->
           <div
-            class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row"
+            class="flex flex-col space-y-3 md:flex-row md:space-x-6 md:space-y-0"
           >
             <!-- Heading  -->
             <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
               <div class="flex items-center space-x-2">
                 <div
-                  class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed"
+                  class="rounded-full bg-brightRed px-4 py-2 text-white md:py-1"
                 >
-                  01
+                  02
                 </div>
                 <h3 class="text-base font-bold md:mb-4 md:hidden">
-                  Track company-wide progress
+                  Advanced built-in reports
                 </h3>
               </div>
             </div>
 
             <div>
-              <h3 class="hidden mb-4 text-lg font-bold md:block">
-                Track company-wide progress
+              <h3 class="mb-4 hidden text-lg font-bold md:block">
+                Advanced built-in reports
               </h3>
               <p class="text-darkGrayishBlue">
-                See how your day-to-day tasks fit into the wider vision. Go from
-                tracking progress at the milestone level all the way done to the
-                smallest of details. Never lose sight of the bigger picture
-                again.
+                Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
               </p>
             </div>
           </div>
           <!-- List Item 1 -->
           <div
-            class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row"
+            class="flex flex-col space-y-3 md:flex-row md:space-x-6 md:space-y-0"
           >
             <!-- Heading  -->
             <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
               <div class="flex items-center space-x-2">
                 <div
-                  class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed"
+                  class="rounded-full bg-brightRed px-4 py-2 text-white md:py-1"
                 >
-                  01
+                  03
                 </div>
                 <h3 class="text-base font-bold md:mb-4 md:hidden">
-                  Track company-wide progress
+                 Everything you need in one place
                 </h3>
               </div>
             </div>
 
             <div>
-              <h3 class="hidden mb-4 text-lg font-bold md:block">
-                Track company-wide progress
+              <h3 class="mb-4 hidden text-lg font-bold md:block">
+                Everything you need in one place
               </h3>
               <p class="text-darkGrayishBlue">
-                See how your day-to-day tasks fit into the wider vision. Go from
-                tracking progress at the milestone level all the way done to the
-                smallest of details. Never lose sight of the bigger picture
-                again.
+                Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
               </p>
             </div>
           </div>
@@ -202,19 +196,19 @@
     <!-- Testimonials -->
     <section id="testimonials">
       <!-- Container to heading and testmonials blocks -->
-      <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+      <div class="mx-auto mt-32 max-w-6xl px-5 text-center">
         <!-- Heading -->
-        <h2 class="text-4xl font-bold text-center">
+        <h2 class="text-center text-4xl font-bold">
           What's Different About Manage?
         </h2>
         <!-- testimonials Container -->
-        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+        <div class="mt-24 flex flex-col md:flex-row md:space-x-6">
           <!--Testimonial 1  -->
           <div
-            class="hidden flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+            class="hidden flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:flex md:w-1/3"
           >
             <img
-              class="w-16 -mt-14 rounded-full"
+              class="-mt-14 w-16 rounded-full"
               src="./img/anisha.png"
               alt="Anisha"
             />
@@ -228,10 +222,10 @@
 
           <!--Testimonial 2  -->
           <div
-            class="hidden md:flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+            class="hidden flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:flex md:w-1/3"
           >
             <img
-              class="w-16 -mt-14 rounded-full"
+              class="-mt-14 w-16 rounded-full"
               src="./img/ali.png"
               alt="Ali"
             />
@@ -245,10 +239,10 @@
 
           <!--Testimonial 3  -->
           <div
-            class="hidden md:flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+            class="hidden flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:flex md:w-1/3"
           >
             <img
-              class="w-16 -mt-14 rounded-full"
+              class="-mt-14 w-16 rounded-full"
               src="./img/richard.png"
               alt="Richard"
             />
@@ -263,7 +257,7 @@
         <!-- Button -->
         <div class="my-16">
           <a
-            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brigthRedLight"
+            class="baseline rounded-full bg-brightRed p-3 px-6 pt-2 text-white hover:bg-brigthRedLight"
             href="#"
           >
             Get Started
@@ -275,18 +269,18 @@
     <section id="cta" class="bg-brightRed">
       <!-- Flex Container -->
       <div
-        class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0"
+        class="container mx-auto flex flex-col items-center justify-between space-y-12 px-6 py-24 md:flex-row md:space-y-0 md:py-12"
       >
         <!-- Heading -->
         <h2
-          class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left"
+          class="text-center text-5xl font-bold leading-tight text-white md:max-w-xl md:text-left md:text-4xl"
         >
           Simplify how your team works today
         </h2>
         <!-- Button -->
         <div>
           <a
-            class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full shadow-2xl baseline hover:bg-gray-900"
+            class="baseline rounded-full bg-white p-3 px-6 pt-2 text-brightRed shadow-2xl hover:bg-gray-900"
             href="#"
           >
             Get Started
@@ -298,18 +292,18 @@
     <footer class="bg-veryDarkBlue">
       <!-- Flex Container -->
       <div
-        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
+        class="container mx-auto flex flex-col-reverse justify-between space-y-8 px-6 py-10 md:flex-row md:space-y-0"
       >
         <!-- Logo and social links container -->
         <div
-          class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start"
+          class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:items-start md:space-y-0"
         >
           <div class="mx-auto my-6 text-center text-white md:hidden">
-            Copyright &copy; 2022, All Rights Reserved
+            Copyright &copy; 2025, All Rights Reserved
           </div>
           <!-- Logo -->
           <div>
-            <img class="h-8" src="img/logo.svg" alt="Logo footer" />
+            <img class="h-8" src="img/logo-white.png" alt="Logo footer" />
           </div>
           <!-- Social Links Container -->
           <div class="flex justify-center space-x-4">
@@ -356,18 +350,18 @@
             <div class="flex space-x-3">
               <input
                 type="text"
-                class="flex-1 px-4 rounded-full focus:outline-none"
+                class="flex-1 rounded-full px-4 focus:outline-none"
                 placeholder="Updated in your inbox"
               />
               <button
-                class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brigthRedLight focus:outline-none"
+                class="rounded-full bg-brightRed px-6 py-2 text-white hover:bg-brigthRedLight focus:outline-none"
               >
                 Go
               </button>
             </div>
           </form>
           <div class="hidden text-white md:block">
-            Copyright &copy; 2022, All Rights Reserved
+            Copyright &copy; 2025, All Rights Reserved
           </div>
         </div>
       </div>
